--- a/gradle.properties
+++ b/gradle.properties
@@ -10,8 +10,5 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
-
-# Dependencies
-fabric_version=0.117.0+1.21.4
+maven_group=io.github.racoondog
+archives_base_name=explodium
