--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+	modImplementation(fabricApi.module("fabric-command-api-v2", "0.118.0+1.21.4"))
 	modImplementation("maven.modrinth:lithium:mc1.21.4-0.14.8-fabric") { transitive = false }
 
 	include(implementation(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.2.0")))
